# mirage

./: .env.example  .gitignore  README.md  package-lock.json
apps/gateway/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
apps/gateway/app/: main.py
apps/gateway/app/api/: router.py
apps/gateway/app/core/: config.py  cors.py  rate_limit.py  security.py
apps/gateway/app/ml/: __init__.py  artifacts.py  datasets.py  evaluation.py  inference.py  training.py
apps/gateway/app/schemas/: actor.py  dashboard.py  decision.py  event.py  honeytoken.py  ml.py  request.py  retraining.py
apps/gateway/app/services/: actor_clusters.py  actor_identity.py  actor_profiles.py  anomaly_engine.py  dashboard_stream.py  decision_engine.py  decoy_engine.py  feature_extraction.py  fingerprint.py  honeytoken.py  inspection.py  logger.py  (+10 more)
apps/gateway/migrations/: env.py
apps/gateway/scripts/: evaluate_model_artifact.py  prepare_dataset.py  review_dataset.py  review_model_artifact.py  smoke_ml_shadow.py  train_model.py
apps/gateway/tests/: conftest.py  test_actor_profiles.py  test_adaptive_decoys.py  test_dashboard_stream.py  test_dataset_preparation.py  test_decision_engine.py  test_feature_extraction.py  test_health.py  test_honeytoken.py  test_ml_artifacts.py  test_ml_evaluation.py  test_ml_shadow.py  test_ml_shadow_summary.py  test_ml_status.py  test_ml_training.py  test_proxy.py  test_retraining.py  test_risk_engine.py
apps/real-app-demo/: Dockerfile  README.md  pyproject.toml
apps/real-app-demo/app/: __init__.py  main.py
(+88 files in other folders)
